previous and next buttons on cake pages no longer go over the header, done by changing z-index to 2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -156,7 +156,7 @@ footer {
     margin-left: 5%;
     position: absolute;
     transform: translate(0, 350px);
-    z-index: 1;
+    z-index: 2;
 }
 
 .previous:hover {
@@ -174,7 +174,7 @@ footer {
     position: absolute;
     transform: translate(0, 350px);
     display: inline-block;
-    z-index: 1;
+    z-index: 2;
 }
 
 .next:hover {
